access-control/Gatekeeper/validation/labels/missing_labels_val/required-labels.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8srequiredlabels
spec:
  crd:
    spec:
      names:
        kind: K8sRequiredLabels
      validation:
        openAPIV3Schema:
            type: object
            properties:
              labels:
                type: object
                additionalProperties:
                    type: string
                
                
  targets:
  - target: admission.k8s.gatekeeper.sh
    rego: |
      package k8srequiredlabels
      
      violation[{"msg": msg, "details": {"missing_labels": missing}}]{
          provided := input.review.object.metadata.labels
          required := input.parameters.labels
          
          missing := { sprintf("%s->%s", [key, required[key]]) |
            required[key];
            not match(key, required, provided)
          }
          count(missing) > 0
          missing_list := [x | x := missing[_]]
          msg := sprintf("You must provide label %v",[missing_list])
      }
      
      match(key, required, provided){
         required[key] == provided[key]
      }
